# claude-library

./: .gitignore  AUDIT-REPORT.md  CANONICAL-MECE-AUDIT.md  DEDUPLICATION-PLAN.md  GROUP-1-TRADING-AUDIT.txt  INTERFACE-MAPPING.md  INVENTORY.md  LIBRARY-COMPLETION-SPRINT-RESULTS.md  PHASE-0A-TECHNICAL-DEBT-AUDIT-REPORT.md  PHASE-0B-COMPLETION-REPORT.md  PHASE-0B-EXTRACTION-PLAN.md  README.md  REPLACEMENT-MAP.md  STANDARD-SCAFFOLDS.md  catalog-index.json  catalog.json  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  restructure_catalog.py  sitecustomize.py  test_integration.py  tsconfig.json  update_catalog.py  validate_catalog.py  vitest.config.ts
.github/workflows/: ci.yml
common/: __init__.py  types.py
components/: __init__.py
components/accounting/: README.md  __init__.py
components/auth/: README.md  __init__.py
components/banking/: README.md  __init__.py  component.json  models.py
components/governance/: __init__.py
components/observability/: __init__.py
components/pipelines/: README.md  __init__.py
components/react_auth/: AuthContext.tsx  AuthProvider.tsx  ProtectedRoute.tsx  README.md  index.ts  types.ts  useAuth.ts
components/react_hooks/: README.md  component.json  index.ts  react_hooks.test.ts  use-async-state.ts  use-local-storage.ts  useAbortableAsync.ts  useAsyncState.ts  useDebounce.ts  useLocalStorage.ts  useThrottle.ts
components/security/: README.md  __init__.py
components/utilities/: __init__.py
domains/: accounting.json  ai.json  analysis.json  api.json  authentication.json  banking.json  caching.json  cognitive.json  database.json  governance.json  http.json  integrations.json  memory.json  messaging.json  multi-entity.json  observability.json  orchestration.json  parsing.json  patterns.json  payments.json  react-auth.json  react.json  realtime.json  reporting.json  scheduling.json  security.json  state.json  testing.json  trading.json  ui-components.json  utilities.json  validation.json
patterns/money_handling/: README.md  __init__.py  component.json  formatting.py  money.py  (+2 more)
scripts/: deploy_component.py  standardize_metadata_and_catalog.py  validate-catalog.cjs  write-ci-workflow.cjs
(+400 files in other folders)
