[project]
name = "claude-library"
version = "2.0.0"
description = "Reusable component library for Claude Code projects"
requires-python = ">=3.11"
readme = "README.md"

# Core dependencies - always installed
dependencies = []

[project.optional-dependencies]
# Component-specific dependencies organized by domain
api = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
]
cache = [
    "redis>=4.5.0",
]
http = [
    "httpx>=0.24.0",
]
auth = [
    "python-jose>=3.3.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
memory = [
    "chromadb>=0.4.0",
]
content = [
    "yt-dlp>=2024.1.0",
    "anthropic>=0.20.0",
]
analysis = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pymoo>=0.6.0",
]
scheduling = [
    "apscheduler>=3.10.0",
]
realtime = [
    "websockets>=11.0.0",
]
payments = [
    "stripe>=5.0.0",
    "plaid-python>=11.0.0",
]
testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "numpy>=1.24.0",
]
yaml = [
    "pyyaml>=6.0",
]
cognitive = [
    "numpy>=1.24.0",
    "pymoo>=0.6.0",
]
# All dependencies
all = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "redis>=4.5.0",
    "httpx>=0.24.0",
    "python-jose>=3.3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pymoo>=0.6.0",
    "apscheduler>=3.10.0",
    "websockets>=11.0.0",
    "stripe>=5.0.0",
    "plaid-python>=11.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["components"]
filterwarnings = [
    "error",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated and scheduled for removal in a future version\\.:DeprecationWarning:pytest_benchmark.utils",
]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
